# timeseriesfuser

./: .flake8  .gitignore  CHANGES.md  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql.yml  python-package.yml
docs/: README.md
examples/: demo_spread_trades_memecoin.py
examples/data/full_tests/output/: output-0.csv  output-1.csv
tests/integration/: mock_interval_data.py  plot_check_core_multi_overlapping_drop_merge.py  plot_check_core_single_nonoverlapping.py  test_batchinterval_fill.py  test_batchinterval_handler.py  test_core_multi_overlapping.py  test_core_multi_overlapping_drop_merge.py  test_core_multi_overlapping_drop_merge_feature_test.py  test_core_multi_overlapping_parquet_time_conversion.py  test_core_single_nonoverlapping.py  test_performance_intervals.py
tests/integration/data/full_tests/output/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  FULLDATA.parquet
tests/integration/data/interval_handler/: 1day_letters.parquet  1hours_letters.parquet  1minute_letters.parquet  1second_letters.parquet  1second_letters_gaps.parquet
tests/integration/data/interval_handler/output/: FULLDATA-parquet.parquet  FULLDATA.parquet  output-0..parquet
tests/integration/data/merge_drop/output/: FULLDATA.csv
tests/integration/data/verification/: multi_overlap_drop_merge.parquet  multi_overlap_millis.parquet  single_nooverlap_binance_btcusdt_large_1h.csv  single_nooverlap_dydx_ethusdperp.parquet
tests/integration/interval_handler/: 1day_letters.parquet  1days_letters.parquet  1hours_letters.parquet  1minute_letters.parquet  1second_letters.parquet
tests/unit/: pwd.py  test_core_datainfo_timestamps_csv.py  test_core_datainfo_timestamps_format_conversion_csv.py  test_core_datainfo_timestamps_parquet.py  test_core_forward_fill.py  test_datainfo_datatypes.py  test_next_intervals.py  test_string_to_unix_interval_conversion.py
tests/unit/data/datatypes_temperature_data/: .~lock.temperature_data.csv#  temperature_data.csv
tests/unit/data/forward_fill/: dydx-LINKUSD-raw-spread_scrape-1695143140782-2023-09-19-1705.parquet  dydx-LINKUSD-raw-spread_scrape-1695145567109-2023-09-19-1746.parquet  dydx-LINKUSD-raw-spread_scrape-1695148291251-2023-09-19-1831.parquet
tests/unit/data/timestamps_start_end/csv/: .~lock.data_1.csv#  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv  data_8.csv  data_9.csv
tests/unit/data/timestamps_start_end/parquet/: data_1.parquet  data_2.parquet  data_3.parquet  data_4.parquet  data_5.parquet  data_6.parquet  data_7.parquet  data_8.parquet  data_9.parquet
tests/unit/data/timestamps_start_end_fmt_conversion/csv/: data_1.csv  data_2.csv  data_3.csv  (+6 more)
timeseriesfuser/: __init__.py  classes.py  core.py  datasources.py  statics.py
timeseriesfuser/helpers/: __init__.py  helpers.py
(+5 files in other folders)
