[project]
name = "timeseriesfuser"
version = "0.5.2"
authors = [
    { name = "Anthony Sweeney", email = "safsweeney@gmail.com" },
]
description = "TimeSeriesFuser - Time series data merging with event-driven distribution."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
[project.urls]
Homepage = "https://github.com/klovanone/timeseriesfuser/"
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
    "wheel"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["timeseriesfuser*", "timeseriesfuser.helpers*","examples*","LICENSE","*.md"]
exclude = ["timeseriesfuser.utilities_scripts(hidden from github)","*.svg"]
namespaces = false
[tool.pylint]
max-line-length = 100
disable = [
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

